src/objects/One_Click_Donate_Subscription__c.object
<CustomObject>
    <description>Springboard one click donate information.</description>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Exp_Month__c</fullName>
        <label>CC Exp Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Exp_Year__c</fullName>
        <label>CC Exp Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Last_4__c</fullName>
        <description>The last 4 digits of the credit card used for this one click donate subscription.</description>
        <inlineHelpText>The last 4 digits of the credit card used for this one click donate subscription.</inlineHelpText>
        <label>CC Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Type__c</fullName>
        <label>CC Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>One Click Donate Subscriptions</relationshipLabel>
        <relationshipName>One_Click_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Form_Id__c</fullName>
        <label>Donation Form Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Form_Name__c</fullName>
        <label>Donation Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The donation that was made during the one click donate opt-in.</description>
        <inlineHelpText>The donation that was made during the one click donate opt-in.</inlineHelpText>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>One Click Donate Subscriptions (Donation)</relationshipLabel>
        <relationshipName>One_Click_Donate_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_Name__c</fullName>
        <label>Donor Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Month__c</fullName>
        <formula>TEXT(CC_Exp_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Year__c</fullName>
        <formula>TEXT(CC_Exp_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Token_Id__c</fullName>
        <label>Payment Token Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Token__c</fullName>
        <label>Payment Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>One Click Donate Subscription</label>
    <nameField>
        <label>One Click Donate Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One Click Donate Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>